crates/kelta-term/tests/it/snapshots/it__snapshot_roundtrip__snapshot-coverage-alt.snap
---
source: crates/kelta-term/tests/it/snapshot_roundtrip.rs
expression: escape(&snap)
---
␛c␛[31mmain 0␛[0m␍␊
␛[32mmain 1␛[0m␍␊
␛[33mmain 2␛[0m␍␊
␛[34mmain 3␛[0m␍␊
␛[35mmain 4␛[0m␍␊
␛[36mmain 5␛[0m␍␊
␛[37mmain 6␛[0m␍␊
␛[31mmain 7␛[0m␍␊
␛[32mmain 8␛[0m␍␊
␛[33mmain 9␛[0m␍␊
␛[34mmain 10␛[0m␍␊
␛[35mmain 11␛[0m␍␊
␛[36mmain 12␛[0m␍␊
␛[37mmain 13␛[0m␍␊
␛[31mmain 14␛[0m␍␊
␛[32mmain 15␛[0m␍␊
␛[33mmain 16␛[0m␍␊
␛[34mmain 17␛[0m␍␊
␛[35mmain 18␛[0m␍␊
␛[36mmain 19␛[0m␍␊
␛[37mmain 20␛[0m␍␊
␛[31mmain 21␛[0m␍␊
␛[32mmain 22␛[0m␍␊
␛[33mmain 23␛[0m␍␊
␛[34mmain 24␛[0m␍␊
␛[35mmain 25␛[0m␍␊
␛[36mmain 26␛[0m␍␊
␛[37mmain 27␛[0m␍␊
␛[31mmain 28␛[0m␍␊
␛[32mmain 29␛[0m␍␊
␛[33mmain 30␛[0m␍␊
␛[34mmain 31␛[0m␍␊
␛[35mmain 32␛[0m␍␊
␛[36mmain 33␛[0m␍␊
␛[37mmain 34␛[0m␍␊
␛[31mmain 35␛[0m␍␊
␛[32mmain 36␛[0m␍␊
␛[33mmain 37␛[0m␍␊
␛[34mmain 38␛[0m␍␊
␛[35mmain 39␛[0m␍␊
␛[36mmain 40␛[0m␍␊
␛[37mmain 41␛[0m␍␊
␛[31mmain 42␛[0m␍␊
␛[32mmain 43␛[0m␍␊
␛[33mmain 44␛[0m␍␊
␛[34mmain 45␛[0m␍␊
␛[35mmain 46␛[0m␍␊
␛[36mmain 47␛[0m␍␊
␛[37mmain 48␛[0m␍␊
␛[31mmain 49␛[0m␍␊
␛[32mmain 50␛[0m␍␊
␛[33mmain 51␛[0m␍␊
␛[34mmain 52␛[0m␍␊
␛[35mmain 53␛[0m␍␊
␛[36mmain 54␛[0m␍␊
␛[37mmain 55␛[0m␍␊
␛[31mmain 56␛[0m␍␊
␛[32mmain 57␛[0m␍␊
␛[33mmain 58␛[0m␍␊
␛[34mmain 59␛[0m␍␊
prompt$␛[24;9H␛[1m␛[?1049h␛[0m␛[2J␛[1;1H␛[1;7m Status ␛[0m  ␛[32m✓ main␛[2;1H␛[0m┌──────┐␛[3;1H│ °␋┌␊ │␛[4;1H└──────┘␛[5;1H  ␛[33mM␛[0m src/file_0.rs␛[6;1H  ␛[33mM␛[0m src/file_1.rs␛[7;1H  ␛[33mM␛[0m src/file_2.rs␛[8;1H  ␛[33mM␛[0m src/file_3.rs␛[9;1H  ␛[33mM␛[0m src/file_4.rs␛[10;1H  ␛[33mM␛[0m ␛[4:3;58;2;255;0;0mundercurl␛[0m5.rs␛[11;1H  ␛[33mM␛[0m src/file_6.rs␛[12;1H  ␛[33mM␛[0m src/file_7.rs␛[13;1H  ␛[33mM␛[0m src/file_8.rs␛[14;1H  ␛[33mM␛[0m src/file_9.rs␛[20;1H␛[70G␛[45mend␛[10;14H␛[0m␛7␛[?1000h␛[?1005h␛[20;73H␛[3 q␛]2;alt title␇␛[?2026l
