crates/kelta-term/tests/it/snapshots/it__snapshot_roundtrip__snapshot-coverage-text.snap
---
source: crates/kelta-term/tests/it/snapshot_roundtrip.rs
expression: escape(&snap)
---
␛c␛[30mhistory line 000␛[0m␍␊
␛[31mhistory line 001␛[0m ·␍␊
␛[32mhistory line 002␛[0m ··␍␊
␛[33mhistory line 003␛[0m ···␍␊
␛[34mhistory line 004␛[0m ····␍␊
␛[35mhistory line 005␛[0m ·····␍␊
␛[36mhistory line 006␛[0m ······␍␊
␛[37mhistory line 007␛[0m ·······␍␊
␛[30mhistory line 008␛[0m ········␍␊
␛[31mhistory line 009␛[0m ·········␍␊
␛[32mhistory line 010␛[0m ··········␍␊
␛[33mhistory line 011␛[0m ···········␍␊
␛[34mhistory line 012␛[0m ············␍␊
␛[35mhistory line 013␛[0m ·············␍␊
␛[36mhistory line 014␛[0m ··············␍␊
␛[37mhistory line 015␛[0m ···············␍␊
␛[30mhistory line 016␛[0m ················␍␊
␛[31mhistory line 017␛[0m ·················␍␊
␛[32mhistory line 018␛[0m ··················␍␊
␛[33mhistory line 019␛[0m ···················␍␊
␛[34mhistory line 020␛[0m ····················␍␊
␛[35mhistory line 021␛[0m ·····················␍␊
␛[36mhistory line 022␛[0m ······················␍␊
␛[37mhistory line 023␛[0m ·······················␍␊
␛[30mhistory line 024␛[0m ························␍␊
␛[31mhistory line 025␛[0m ·························␍␊
␛[32mhistory line 026␛[0m ··························␍␊
␛[33mhistory line 027␛[0m ···························␍␊
␛[34mhistory line 028␛[0m ····························␍␊
␛[35mhistory line 029␛[0m ·····························␍␊
␛[36mhistory line 030␛[0m ······························␍␊
␛[37mhistory line 031␛[0m ·······························␍␊
␛[30mhistory line 032␛[0m ································␍␊
␛[31mhistory line 033␛[0m ·································␍␊
␛[32mhistory line 034␛[0m ··································␍␊
␛[33mhistory line 035␛[0m ···································␍␊
␛[34mhistory line 036␛[0m ····································␍␊
␛[35mhistory line 037␛[0m ·····································␍␊
␛[36mhistory line 038␛[0m ······································␍␊
␛[37mhistory line 039␛[0m ·······································␍␊
␛[30mhistory line 040␛[0m␍␊
␛[31mhistory line 041␛[0m ·␍␊
␛[32mhistory line 042␛[0m ··␍␊
␛[33mhistory line 043␛[0m ···␍␊
␛[34mhistory line 044␛[0m ····␍␊
␛[35mhistory line 045␛[0m ·····␍␊
␛[36mhistory line 046␛[0m ······␍␊
␛[37mhistory line 047␛[0m ·······␍␊
␛[30mhistory line 048␛[0m ········␍␊
␛[31mhistory line 049␛[0m ·········␍␊
␛[32mhistory line 050␛[0m ··········␍␊
␛[33mhistory line 051␛[0m ···········␍␊
␛[34mhistory line 052␛[0m ············␍␊
␛[35mhistory line 053␛[0m ·············␍␊
␛[36mhistory line 054␛[0m ··············␍␊
␛[37mhistory line 055␛[0m ···············␍␊
␛[30mhistory line 056␛[0m ················␍␊
␛[31mhistory line 057␛[0m ·················␍␊
␛[32mhistory line 058␛[0m ··················␍␊
␛[33mhistory line 059␛[0m ···················␍␊
␛[34mhistory line 060␛[0m ····················␍␊
␛[35mhistory line 061␛[0m ·····················␍␊
␛[36mhistory line 062␛[0m ······················␍␊
␛[37mhistory line 063␛[0m ·······················␍␊
␛[30mhistory line 064␛[0m ························␍␊
␛[31mhistory line 065␛[0m ·························␍␊
␛[32mhistory line 066␛[0m ··························␍␊
␛[33mhistory line 067␛[0m ···························␍␊
␛[34mhistory line 068␛[0m ····························␍␊
␛[35mhistory line 069␛[0m ·····························␍␊
␛[36mhistory line 070␛[0m ······························␍␊
␛[37mhistory line 071␛[0m ·······························␍␊
␛[30mhistory line 072␛[0m ································␍␊
␛[31mhistory line 073␛[0m ·································␍␊
␛[32mhistory line 074␛[0m ··································␍␊
␛[33mhistory line 075␛[0m ···································␍␊
␛[34mhistory line 076␛[0m ····································␍␊
␛[35mhistory line 077␛[0m ·····································␍␊
␛[36mhistory line 078␛[0m ······································␍␊
␛[37mhistory line 079␛[0m ·······································␍␊
␛[30mhistory line 080␛[0m␍␊
␛[31mhistory line 081␛[0m ·␍␊
␛[32mhistory line 082␛[0m ··␍␊
␛[33mhistory line 083␛[0m ···␍␊
␛[34mhistory line 084␛[0m ····␍␊
␛[35mhistory line 085␛[0m ·····␍␊
␛[36mhistory line 086␛[0m ······␍␊
␛[37mhistory line 087␛[0m ·······␍␊
␛[30mhistory line 088␛[0m ········␍␊
␛[31mhistory line 089␛[0m ·········␍␊
␛[32mhistory line 090␛[0m ··········␍␊
␛[33mhistory line 091␛[0m ···········␍␊
␛[34mhistory line 092␛[0m ············␍␊
␛[35mhistory line 093␛[0m ·············␍␊
␛[36mhistory line 094␛[0m ··············␍␊
␛[37mhistory line 095␛[0m ···············␍␊
␛[30mhistory line 096␛[0m ················␍␊
␛[31mhistory line 097␛[0m ·················␍␊
␛[32mhistory line 098␛[0m ··················␍␊
␛[33mhistory line 099␛[0m ···················␍␊
␛[34mhistory line 100␛[0m ····················␍␊
␛[35mhistory line 101␛[0m ·····················␍␊
␛[36mhistory line 102␛[0m ······················␍␊
␛[37mhistory line 103␛[0m ·······················␍␊
␛[30mhistory line 104␛[0m ························␍␊
␛[31mhistory line 105␛[0m ·························␍␊
␛[32mhistory line 106␛[0m ··························␍␊
␛[33mhistory line 107␛[0m ···························␍␊
␛[34mhistory line 108␛[0m ····························␍␊
␛[35mhistory line 109␛[0m ·····························␍␊
␛[36mhistory line 110␛[0m ······························␍␊
␛[37mhistory line 111␛[0m ·······························␍␊
␛[30mhistory line 112␛[0m ································␍␊
␛[31mhistory line 113␛[0m ·································␍␊
␛[32mhistory line 114␛[0m ··································␍␊
␛[33mhistory line 115␛[0m ···································␍␊
␛[34mhistory line 116␛[0m ····································␍␊
␛[35mhistory line 117␛[0m ·····································␍␊
␛[36mhistory line 118␛[0m ······································␍␊
␛[37mhistory line 119␛[0m ·······································␍␊
␛[1mbold␛[0m ␛[2mdim␛[0m ␛[3mitalic␛[0m ␛[7minverse␛[0m ␛[8mhidden␛[0m ␛[9mstrike␛[0m ␛[1;2;3;7;9mall␛[0m␍␊
␛[4msingle␛[0m ␛[4:2mdouble␛[0m ␛[4:3;58;2;255;0;0mundercurl␛[0m ␛[4:4;58;5;33mdotted␛[0m ␛[4:5mdashed␛[0m dbl21␍␊
␛[30m30␛[0;90m90␛[0;90;40m40␛[0;90;100m100␛[0;31m31␛[0;91m91␛[0;91;41m41␛[0;91;101m101␛[0;32m32␛[0;92m92␛[0;92;42m42␛[0;92;102m102␛[0;33m33␛[0;93m93␛[0;93;43m43␛[0;93;103m103␛[0;34m34␛[0;94m94␛[0;94;44m44␛[0;94;104m104␛[0;35m35␛[0;95m95␛[0;95;45m45␛[0;95;105m105␛[0;36m36␛[0;96m96␛[0;96;46m46␛[0;96;106m106␛[0;37m37␛[0;97m97␛[0;97;47m47␛[0;97;107m107␛[0m␍␊
␛[38;5;0;48;5;255m  0␛[0;38;5;17;48;5;238m 17␛[0;38;5;34;48;5;221m 34␛[0;38;5;51;48;5;204m 51␛[0;38;5;68;48;5;187m 68␛[0;38;5;85;48;5;170m 85␛[0;38;5;102;48;5;153m102␛[0;38;5;119;48;5;136m119␛[0;38;5;136;48;5;119m136␛[0;38;5;153;48;5;102m153␛[0;38;5;170;48;5;85m170␛[0;38;5;187;48;5;68m187␛[0;38;5;204;48;5;51m204␛[0;38;5;221;48;5;34m221␛[0;38;5;238;48;5;17m238␛[0;38;5;255;48;5;0m255␛[0m␍␊
␛[38;2;10;20;30;48;2;200;100;50mtruecolor␛[0;38;2;1;2;3;48;2;200;100;50mcolon␛[0m␍␊
␛]8;id=k1;https://example.com/a;b␛\link one␛]8;;␛\ plain ␛[1m␛]8;id=k2;file:///tmp/x␛\bold link␛[0m␛]8;;␛\␍␊
wide 日本語 emoji 😀 combining é ä̲ zwj ❤️␍␊
tabs ␛[5G\x09␛[6G   a ␛[10G\x09␛[11G␛[17Gbb ␛[19G\x09␛[20G     ccc ␛[28G\x09␛[29G    x␍␊
┌────┐ ascii │─│ back␍␊
wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap- ␍wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap- ␍wrap-wrap-wrap-wrap-wrap-wrap-wrap-wrap-␍␊
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx界after␛[K␍␊
␛[44mbg erase to eol                                                                 ␛[0m␍␊
␛[42m   ␛[0m  trailing coloured blanks␛[43m  ␛[0m␍␊
end of text␛[24;12H␛)0␛]2;coverage ✓␇␛]7;file://host/tmp/cov%20dir␇␛[?2026l
