crates/kelta-term/tests/it/snapshots/it__snapshot_roundtrip__snapshot-lazygit-like.snap
---
source: crates/kelta-term/tests/it/snapshot_roundtrip.rs
expression: escape(&snap)
---
␛c␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␍␊
␛[1;1H␛[?1049h␛[2J␛[1;1H␛[4:3;58;2;255;0;0mundercurl␛[0m ␛[32m✓ main␛[2;1H␛[0m┌───────────────────┐␛[3;1H│ F␋┌␊⎽␛[19G│␛[4;1H└───────────────────┘␛[5;1H  ␛[33mM␛[0m src/file_0.rs␛[6;1H  ␛[33mM␛[0m src/file_1.rs␛[7;1H  ␛[33mM␛[0m src/file_2.rs␛[8;1H  ␛[33mM␛[0m src/file_3.rs␛[9;1H  ␛[33mM␛[0m src/file_4.rs␛[10;1H  ␛[33mM␛[0m src/file_5.rs␛[11;1H  ␛[33mM␛[0m src/file_6.rs␛[12;1H  ␛[33mM␛[0m src/file_7.rs␛[13;1H  ␛[33mM␛[0m src/file_8.rs␛[14;1H  ␛[33mM␛[0m src/file_9.rs␛[20;1Hinput: \e[200~pasted\e[201~␛[?1h␛[?1002h␛[?1004h␛[?1006h␛[?2004h␛[20;28H␛[5 q␛]2;tui-sim alt␇␛[?2026l
